# PrgAssistenzaUNI

./: CMakeLists.txt  test.c
ExternalLibraries/fort/: fort.c  fort.h
Source/: main.c
Source/Constants/: constants.h
Source/Entities/Client/: client.c  client.h
Source/Entities/Request/: request.c  request.h
Source/Entities/RequestList/: requestList.c  requestList.h
Source/FileManger/Reader/: fileReader.c  fileReader.h
Source/FileManger/Writer/: fileWriter.c  fileWriter.h
Source/Interface/: interfaceConstants.h
Source/Interface/InterfaceBuilder/: interfaceBuilder.c  interfaceBuilder.h
Source/Interface/MenuManager/: menuManager.c  menuManager.h
Source/RequestHandlers/RequestFilter/: requestFilter.c  requestFilter.h  requestOrganizer.c  requestOrganizer.cpp  requestOrganizer.h
Source/RequestHandlers/RequestOrganizer/: requestFilter.c  requestOrganizer.c  requestOrganizer.h
Source/RequestHandlers/RequestStats/: requestStats.c  requestStats.h
Source/Utilities/: util.c  util.h
